unpackaged/main/default/objects/tspa__VRA_Session_Notification__e/tspa__VRA_Session_Notification__e.object-meta.xml
<CustomObject>
    <description>Real-time events driven from session initiation in Salesforce.
This platform events record is published from VRA managed automations.</description>
    <label>VRA Session Notification</label>
    <pluralLabel>VRA Session Notifications</pluralLabel>
</CustomObject>