unpackaged/main/default/objects/tspa__VRA_Session_Notification__e/fields/tspa__Status__c.field-meta.xml
<CustomField>
    <fullName>tspa__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>