unpackaged/main/default/objects/tspa__VRA_Session_Notification__e/fields/tspa__Suport_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Suport_Request_Id__c</fullName>
    <label>Suport Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>